[gd_scene load_steps=7 format=2]

[ext_resource path="res://Screens/Camera/Shake3D/Shake3DBullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://Screens/Camera/Shake3D/Shake3DTurret.gd" type="Script" id=2]
[ext_resource path="res://common/Turret3D/Turret.tscn" type="PackedScene" id=3]
[ext_resource path="res://common/Assets3D/texures/texture_atlas.png" type="Texture" id=4]

[sub_resource type="SpatialMaterial" id=1]
resource_local_to_scene = true
albedo_texture = ExtResource( 4 )
roughness = 0.3

[sub_resource type="SpatialMaterial" id=2]
resource_local_to_scene = true
albedo_texture = ExtResource( 4 )
roughness = 0.5

[node name="Shake3DTurret" type="Spatial"]
script = ExtResource( 2 )
player_path = NodePath("../FPSPlayer")
bullet = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Turret" parent="." instance=ExtResource( 3 )]

[node name="turret_base" parent="Turret" index="0"]
material/0 = SubResource( 1 )

[node name="turret_housing" parent="Turret/turret_base" index="0"]
material/0 = SubResource( 1 )

[node name="turret_center" parent="Turret/turret_base/turret_housing" index="0"]
material/0 = SubResource( 1 )
material/1 = SubResource( 2 )

[node name="turret_cannon" parent="Turret/turret_base/turret_housing/turret_center" index="0"]
material/0 = SubResource( 1 )
material/1 = SubResource( 2 )

[node name="shot_origin" type="Spatial" parent="Turret/turret_base/turret_housing/turret_center/turret_cannon" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.757437 )

[editable path="Turret"]
